--- a/data/fixtures/fixtures.yml
+++ b/data/fixtures/fixtures.yml
@@ -1,17 +1,26 @@
-# # Populate this file with data to be loaded by your ORM's *:data-load task.
-# # You can create multiple files in this directory (i.e. 010_users.yml,
-# # 020_articles.yml, etc) which will be loaded in alphabetical order.
-# # 
-# # See documentation for your ORM's *:data-load task for more information.
-# 
-# User:
-#   fabien:
-#     username: fabien
-#     password: changeme
-#     name:     Fabien Potencier
-#     email:    fabien.potencier@symfony-project.com
-#   kris:
-#     username: Kris.Wallsmith
-#     password: changeme
-#     name:     Kris Wallsmith
-#     email:    kris.wallsmith@symfony-project.com
+userdata:
+  userdata_1:
+    user: user_1
+    information: userdata1
+    created_at: '2012-04-29 20:55:16'
+    updated_at: '2012-04-29 20:55:16'
+  userdata_2:
+    user: user_2
+    information: userdata2
+    created_at: '2012-04-29 20:55:23'
+    updated_at: '2012-04-29 20:55:23'
+user:
+  user_1:
+    user: user1
+    password: user1
+    hash: user1
+    email: user1@rutino.com
+    created_at: '2012-04-29 20:54:17'
+    updated_at: '2012-04-29 20:54:46'
+  user_2:
+    user: user2
+    password: user2
+    hash: user2
+    email: user2@rutino.com
+    created_at: '2012-04-29 20:54:56'
+    updated_at: '2012-04-29 20:54:56'
