--- a/apps/backend/modules/transaction/config/generator.yml
+++ b/apps/backend/modules/transaction/config/generator.yml
@@ -1,13 +1,13 @@
 generator:
   class: sfDoctrineGenerator
   param:
-    model_class:           userdata
+    model_class:           Transaction
     theme:                 admin
     non_verbose_templates: true
     with_show:             false
     singular:              ~
     plural:                ~
-    route_prefix:          userdata
+    route_prefix:          transaction
     with_doctrine_route:   true
     actions_base_class:    sfActions
 
