--- a/config/databases.yml
+++ b/config/databases.yml
@@ -2,6 +2,6 @@ all:
   doctrine:
     class: sfDoctrineDatabase
     param:
-      dsn: 'mysql:host=localhost;dbname=rutino-server'
+      dsn: 'mysql:host=localhost;dbname=rutino_server'
       username: root
       password:
