--- a/data/fixtures/fixtures.yml
+++ b/data/fixtures/fixtures.yml
@@ -1,26 +1,116 @@
-userdata:
-  userdata_1:
-    user: user_1
-    information: userdata1
-    created_at: '2012-04-29 20:55:16'
-    updated_at: '2012-04-29 20:55:16'
-  userdata_2:
-    user: user_2
-    information: userdata2
-    created_at: '2012-04-29 20:55:23'
-    updated_at: '2012-04-29 20:55:23'
-user:
-  user_1:
-    username: user1
-    password: user1
-    hash: user1
-    email: user1@rutino.com
-    created_at: '2012-04-29 20:54:17'
-    updated_at: '2012-04-29 20:54:46'
-  user_2:
-    username: user2
-    password: user2
-    hash: user2
-    email: user2@rutino.com
-    created_at: '2012-04-29 20:54:56'
-    updated_at: '2012-04-29 20:54:56'
+Wallet:
+  Wallet_1:
+    mobile_id: null
+    User: User_1
+    name: Carteralex
+    description: ''
+    created_at: '2012-05-18 21:12:17'
+    updated_at: '2012-05-18 21:12:17'
+  Wallet_2:
+    mobile_id: null
+    User: User_2
+    name: Carterangel
+    description: ''
+    created_at: '2012-05-18 21:12:25'
+    updated_at: '2012-05-18 21:12:25'
+Account:
+  Account_1:
+    mobile_id: null
+    Wallet: Wallet_1
+    AccountType: AccountType_1
+    name: Visa
+    description: ''
+    created_at: '2012-05-18 21:13:07'
+    updated_at: '2012-05-18 21:13:07'
+  Account_2:
+    mobile_id: null
+    Wallet: Wallet_2
+    AccountType: AccountType_2
+    name: Santander
+    description: ''
+    created_at: '2012-05-18 21:13:14'
+    updated_at: '2012-05-18 21:13:14'
+AccountType:
+  AccountType_1:
+    mobile_id: null
+    name: 'Credit card'
+    description: ''
+    icon: ''
+    created_at: '2012-05-18 21:12:40'
+    updated_at: '2012-05-18 21:12:40'
+  AccountType_2:
+    mobile_id: null
+    name: 'Bank account'
+    description: ''
+    icon: ''
+    created_at: '2012-05-18 21:12:47'
+    updated_at: '2012-05-18 21:12:47'
+  AccountType_3:
+    mobile_id: null
+    name: Deposit
+    description: ''
+    icon: ''
+    created_at: '2012-05-18 21:12:51'
+    updated_at: '2012-05-18 21:12:51'
+  AccountType_4:
+    mobile_id: null
+    name: Cash
+    description: ''
+    icon: ''
+    created_at: '2012-05-18 21:12:55'
+    updated_at: '2012-05-18 21:12:55'
+Transaction:
+  Transaction_1:
+    mobile_id: null
+    Account: Account_1
+    Currency: Currency_1
+    name: Nomina
+    description: ''
+    amount: '900.00'
+    date: '2012-01-01 02:08:00'
+    picture: ''
+    geo: ''
+    created_at: '2012-05-18 21:14:52'
+    updated_at: '2012-05-18 21:14:52'
+  Transaction_2:
+    mobile_id: null
+    Account: Account_2
+    Currency: Currency_2
+    name: Mobile
+    description: ''
+    amount: '-25.54'
+    date: '2012-05-13 13:06:00'
+    picture: ''
+    geo: ''
+    created_at: '2012-05-18 21:15:42'
+    updated_at: '2012-05-18 21:15:42'
+User:
+  User_1:
+    username: alex
+    password: alex
+    hash: alex
+    email: bosch.alejandro@gmail.com
+    created_at: '2012-05-18 21:11:46'
+    updated_at: '2012-05-18 21:11:46'
+  User_2:
+    username: angel
+    password: angel
+    hash: angel
+    email: ladirecciondeangel@gmail.com
+    created_at: '2012-05-18 21:12:00'
+    updated_at: '2012-05-18 21:12:00'
+Currency:
+  Currency_1:
+    mobile_id: null
+    name: Dollar
+    description: ''
+    exchange: '0.89'
+    created_at: '2012-05-18 21:13:40'
+    updated_at: '2012-05-18 21:13:40'
+  Currency_2:
+    mobile_id: null
+    name: Euro
+    description: ''
+    exchange: '1.00'
+    created_at: '2012-05-18 21:15:10'
+    updated_at: '2012-05-18 21:15:10'
