--- a/apps/api/modules/wallet/config/generator.yml
+++ b/apps/api/modules/wallet/config/generator.yml
@@ -26,5 +26,5 @@ generator:
 #        pagination_page_size:          100     # the default number of items in a page
 #        sort_custom:                   false   # set to true to allow the client to pass a sort_by and a sort_order parameter
 #        sort_default:                  []      # set to [column, asc|desc] in order to sort on a column
-        filters:                               # list here the filters
-          created_at:                  { date_format: 'Y-m-d', multiple: true }  # for instance
+#        filters:                               # list here the filters
+#          created_at:                  { date_format: 'Y-m-d', multiple: true }  # for instance
