--- a/data/fixtures/fixtures.yml
+++ b/data/fixtures/fixtures.yml
@@ -1,12 +1,47 @@
+sfGuardUser:
+  User_admin:
+    first_name:     Administrator
+    last_name:      
+    email_address:  admin@rutino.com
+    username:       admin
+    password:       admin
+    is_super_admin: true
+    Groups:         [Group_admin]
+  alex:
+    first_name:     Alejandro
+    last_name:      Bosch
+    email_address:  bosch.alejandro@gmail.com
+    username:       alex
+    password:       alex
+    is_super_admin: false
+  angel:
+    first_name:     Angel
+    last_name:      Roldán
+    email_address:  ladirecciondeangel@gmail.com
+    username:       angel
+    password:       angel
+    is_super_admin: false
+
+sfGuardGroup:
+  Group_admin:
+    name:           admin
+    description:    Administrator group
+    Permissions:    [Permission_admin]
+
+sfGuardPermission:
+  Permission_admin:
+    name:           admin
+    description:    Administrator permission
+
 Wallet:
   Wallet_1:
-    User: User_1
+    sfGuardUser: alex
     name: Carteralex
     description: ''
     created_at: '2012-05-18 21:12:17'
     updated_at: '2012-05-18 21:12:17'
   Wallet_2:
-    User: User_2
+    sfGuardUser: angel
     name: Carterangel
     description: ''
     created_at: '2012-05-18 21:12:25'
@@ -74,21 +109,6 @@ Transaction:
     geo: ''
     created_at: '2012-05-18 21:15:42'
     updated_at: '2012-05-18 21:15:42'
-User:
-  User_1:
-    username: alex
-    password: alex
-    hash: alex
-    email: bosch.alejandro@gmail.com
-    created_at: '2012-05-18 21:11:46'
-    updated_at: '2012-05-18 21:11:46'
-  User_2:
-    username: angel
-    password: angel
-    hash: angel
-    email: ladirecciondeangel@gmail.com
-    created_at: '2012-05-18 21:12:00'
-    updated_at: '2012-05-18 21:12:00'
 Currency:
   Currency_1:
     name: Dollar
