Cambiado el script de borrado de las tablas de la base de datos. Añadida la autenticación en la aplicación api.

--- a/apps/api/config/routing.yml
+++ b/apps/api/config/routing.yml
@@ -1,3 +1,8 @@
+auth:
+  url: /auth/:username/:password
+  param: { module: auth, action: index }
+
+
 user:
   class:   sfObjectRouteCollection
   options:
