--- a/data/fixtures/fixtures.yml
+++ b/data/fixtures/fixtures.yml
@@ -1,16 +1,16 @@
 Report:
-  Report_1:
+  Report_3:
     global_id: w_1
-    Wallet: Wallet_1
+    Wallet: Wallet_3
     name: 'Reporte de Alex'
     description: prueba
     date_from: '2007-01-01 00:00:00'
     date_to: '2013-01-01 16:17:00'
     created_at: '2012-05-26 22:36:39'
     updated_at: '2012-05-26 22:36:39'
-  Report_2:
+  Report_4:
     global_id: w_2
-    Wallet: Wallet_2
+    Wallet: Wallet_4
     name: 'Reporte de Angel'
     description: prueba
     date_from: '2011-01-02 00:03:00'
@@ -18,46 +18,46 @@ Report:
     created_at: '2012-05-26 22:37:17'
     updated_at: '2012-05-26 22:37:17'
 Wallet:
-  Wallet_1:
+  Wallet_3:
     global_id: w_1
-    sfGuardUser: sfGuardUser_2
+    sfGuardUser: sfGuardUser_5
     name: Carteralex2
     description: ''
     created_at: '2012-05-18 21:12:17'
     updated_at: '2012-05-22 23:05:13'
-  Wallet_2:
+  Wallet_4:
     global_id: w_2
-    sfGuardUser: sfGuardUser_3
+    sfGuardUser: sfGuardUser_6
     name: Carterangel2
     description: ''
     created_at: '2012-05-18 21:12:25'
     updated_at: '2012-05-22 23:05:13'
 sfGuardUserGroup:
-  sfGuardUserGroup_1_1:
-    User: sfGuardUser_1
-    Group: sfGuardGroup_1
+  sfGuardUserGroup_4_2:
+    User: sfGuardUser_4
+    Group: sfGuardGroup_2
     created_at: '2012-05-22 23:05:13'
     updated_at: '2012-05-22 23:05:13'
 sfGuardPermission:
-  sfGuardPermission_1:
+  sfGuardPermission_2:
     name: admin
     description: 'Administrator permission'
     created_at: '2012-05-22 23:05:13'
     updated_at: '2012-05-22 23:05:13'
 sfGuardGroupPermission:
-  sfGuardGroupPermission_1_1:
-    Group: sfGuardGroup_1
-    Permission: sfGuardPermission_1
+  sfGuardGroupPermission_2_2:
+    Group: sfGuardGroup_2
+    Permission: sfGuardPermission_2
     created_at: '2012-05-22 23:05:13'
     updated_at: '2012-05-22 23:05:13'
 sfGuardGroup:
-  sfGuardGroup_1:
+  sfGuardGroup_2:
     name: admin
     description: 'Administrator group'
     created_at: '2012-05-22 23:05:13'
     updated_at: '2012-05-22 23:05:13'
 sfGuardUser:
-  sfGuardUser_1:
+  sfGuardUser_4:
     first_name: Administrator
     last_name: null
     email_address: admin@rutino.com
@@ -70,7 +70,7 @@ sfGuardUser:
     last_login: '2012-05-26 22:24:17'
     created_at: '2012-05-22 23:05:13'
     updated_at: '2012-05-26 22:24:17'
-  sfGuardUser_2:
+  sfGuardUser_5:
     first_name: Alejandro
     last_name: Bosch
     email_address: bosch.alejandro@gmail.com
@@ -83,7 +83,7 @@ sfGuardUser:
     last_login: null
     created_at: '2012-05-22 23:05:13'
     updated_at: '2012-05-22 23:05:13'
-  sfGuardUser_3:
+  sfGuardUser_6:
     first_name: Angel
     last_name: Roldán
     email_address: ladirecciondeangel@gmail.com
@@ -97,45 +97,45 @@ sfGuardUser:
     created_at: '2012-05-22 23:05:13'
     updated_at: '2012-05-22 23:05:13'
 Account:
-  Account_1:
+  Account_3:
     global_id: w_1
-    Wallet: Wallet_1
-    AccountType: AccountType_1
+    Wallet: Wallet_3
+    AccountType: AccountType_5
     name: Visa
     description: ''
     created_at: '2012-05-18 21:13:07'
     updated_at: '2012-05-22 23:05:13'
-  Account_2:
+  Account_4:
     global_id: w_2
-    Wallet: Wallet_2
-    AccountType: AccountType_4
+    Wallet: Wallet_4
+    AccountType: AccountType_8
     name: Santander
     description: ''
     created_at: '2012-05-18 21:13:14'
     updated_at: '2012-05-22 23:05:13'
 AccountType:
-  AccountType_1:
+  AccountType_5:
     global_id: w_1
     name: 'Credit card'
     description: ''
     icon: ''
     created_at: '2012-05-18 21:12:40'
     updated_at: '2012-05-22 23:05:13'
-  AccountType_2:
+  AccountType_6:
     global_id: w_2
     name: 'Bank account'
     description: ''
     icon: ''
     created_at: '2012-05-18 21:12:47'
     updated_at: '2012-05-22 23:05:13'
-  AccountType_3:
+  AccountType_7:
     global_id: w_3
     name: Deposit
     description: ''
     icon: ''
     created_at: '2012-05-18 21:12:51'
     updated_at: '2012-05-22 23:05:13'
-  AccountType_4:
+  AccountType_8:
     global_id: w_4
     name: Cash
     description: ''
@@ -143,39 +143,41 @@ AccountType:
     created_at: '2012-05-18 21:12:55'
     updated_at: '2012-05-22 23:05:13'
 Transaction:
-  Transaction_1:
+  Transaction_3:
     global_id: w_1
-    Account: Account_1
-    Currency: Currency_1
+    Account: Account_3
+    Currency: Currency_3
     name: Nomina
     description: ''
     amount: '900.00'
     date: '2012-01-01 02:08:00'
+    latitude: null
+    longitude: null
     picture: ''
-    geo: ''
     created_at: '2012-05-18 21:14:52'
     updated_at: '2012-05-22 23:05:13'
-  Transaction_2:
+  Transaction_4:
     global_id: w_2
-    Account: Account_2
-    Currency: Currency_2
+    Account: Account_4
+    Currency: Currency_4
     name: Mobile
     description: ''
     amount: '-25.54'
     date: '2012-05-13 13:06:00'
+    latitude: null
+    longitude: null
     picture: ''
-    geo: ''
     created_at: '2012-05-18 21:15:42'
     updated_at: '2012-05-22 23:05:13'
 Currency:
-  Currency_1:
+  Currency_3:
     global_id: w_1
     name: Dollar
     description: ''
     exchange: '0.89'
     created_at: '2012-05-18 21:13:40'
     updated_at: '2012-05-22 23:05:13'
-  Currency_2:
+  Currency_4:
     global_id: w_2
     name: Euro
     description: ''
@@ -183,16 +185,16 @@ Currency:
     created_at: '2012-05-18 21:15:10'
     updated_at: '2012-05-22 23:05:13'
 PeriodicTransaction:
-  PeriodicTransaction_1:
+  PeriodicTransaction_2:
     global_id: w_1
-    Account: Account_2
-    Currency: Currency_2
+    Account: Account_4
+    Currency: Currency_4
     name: Nomina
     description: desc
     amount: '1560.00'
     date: '2012-05-27 23:00:00'
     picture: ''
-    geo: ''
+    geo: null
     periodicity: '1'
     created_at: '2012-05-26 22:25:40'
     updated_at: '2012-05-26 22:25:41'
