--- a/apps/api/modules/periodic_transaction/config/generator.yml
+++ b/apps/api/modules/periodic_transaction/config/generator.yml
@@ -11,16 +11,16 @@ generator:
 #        formats_strict:                true
 #        separator:                     ','     # separator used for multiple filters
       get:
-        additional_params:             [ user_id, account_global_id, currency_global_id ]      # list here additionnal params names, which are not object properties
+        additional_params:             [ user_id ]      # list here additionnal params names, which are not object properties
 #        default_format:                json    # the default format of the response. If not set, will default to json. accepted values are "json", "xml" or "yaml"
 #        display:                       []      # list here the fields to render in the response
-#        embed_relations:               []      # list here relations to embed in the response
+        embed_relations:               [ Account, Currency ]      # list here relations to embed in the response
 #        embedded_relations_hide:
 #          Category:                    [id]    # you can hide fields inside a certain embedded relation
 #        global_additional_fields:      []      # list here additionnal calculated global fields
 #        hide:                          [id]    # list here the fields you don't want to expose
 #        max_items:                     0       # uncomment to fix an absolute limit to the number of items in the response
-        object_additional_fields:      [ user_id, account_global_id, currency_global_id ]      # list here additionnal calculated fields
+        object_additional_fields:      [ account_global_id, currency_global_id ]      # list here additionnal calculated fields
 #        pagination_enabled:            false   # set to true to activate the pagination
 #        pagination_custom_page_size:   false   # set to true to allow the client to pass a page_size parameter
 #        pagination_page_size:          100     # the default number of items in a page
